# sox_project

./: .gitignore  gradle.properties  settings.gradle
app/: build.gradle  playmusic.jks
app/src/androidTest/java/com/example/cpp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Docs.Features  README  gsm.c  libsox_i.c  lpc10.c  mszi_test.cpp  mszi_test.h  native-lib.cpp  wav.c
app/src/main/cpp/sox_source/: t.bat
app/src/main/cpp/src/: CMakeLists.txt  formats.c  msz.c  msz.h  sox.c  sox_handler.c  sox_handler.h
app/src/main/cpp/text_sum/: subtraction.cpp  subtraction.h
app/src/main/java/com/example/cpp/: ByteReadBusiness.kt  FileUtil.java  MainActivity.kt  SoudSoxBusiness.kt  SoxApplication.kt  SoxUtil.kt  SumApi.kt  WebSocketActivity.kt  WebSocketLifecycle.kt  WebSocketTestFragment.kt
app/src/main/java/com/psyone/sox/: EffectsBean.kt  EffectsTopBean.kt  NewHandlerSoxAudioProcessor.kt  SoxAudioProcessor.kt  SoxProgramHandler.kt
app/src/main/res/drawable/: shape_gray1.xml
app/src/main/res/layout/: activity_content.xml  activity_main.xml  adapter_byte_show.xml  adapter_effects.xml  adapter_effects_detial.xml  fragmen_choose_music_type.xml  fragment_para.xml  fragment_web_socket_test.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cpp/: ExampleUnitTest.kt
comment/: build.gradle
comment/src/main/java/com/musongzi/comment/: ExtensionMethod.kt
comment/src/main/res/layout/: adapter_file.xml
core/: build.gradle
core/src/main/java/com/musongzi/core/: ExtensionCoreMethod.kt
gradle/wrapper/: gradle-wrapper.properties
textui/: build.gradle
textui/src/androidTest/java/com/example/textui/: ExampleInstrumentedTest.kt
textui/src/main/: AndroidManifest.xml
textui/src/main/java/com/example/textui/: AutoRectFragment.kt  MainActivity.kt  RectBean.kt  RectBusiness.kt
textui/src/main/res/layout/: activity_main.xml  fragemnt_rect.xml  item_big.xml
textui/src/main/res/values/: strings.xml  themes.xml
textui/src/main/res/values-night/: themes.xml
textui/src/test/java/com/example/textui/: ExampleUnitTest.kt
(+44 files in other folders)
